add test and change readme